minor misc code cleanup