@@ -24,7 +24,6 @@ import me.desht.pneumaticcraft.common.progwidgets.IProgWidget;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Class to build simple (no jumping) Drone programs, without needing to worry about the X/Y locations of widgets
@@ -32,7 +31,6 @@ import java.util.stream.Collectors;
  * @author MineMaarten
  */
 public class DroneProgramBuilder {
-
     private final List<DroneInstruction> instructions = new ArrayList<>();
 
     public void add(IProgWidget mainInstruction, IProgWidget... whitelist) {
@@ -51,8 +49,7 @@ public class DroneProgramBuilder {
                 for (int paramIdx = 0; paramIdx < instruction.mainInstruction.getParameters().size(); paramIdx++) {
                     ProgWidgetType<?> type = instruction.mainInstruction.getParameters().get(paramIdx);
                     List<IProgWidget> whitelist = instruction.whitelist.stream()
-                            .filter(w -> type == w.getType())
-                            .collect(Collectors.toList());
+                            .filter(w -> type == w.getType()).toList();
                     int curX = instruction.mainInstruction.getWidth() / 2;
                     for (IProgWidget whitelistItem : whitelist) {
                         whitelistItem.setX(curX);
@@ -69,15 +66,7 @@ public class DroneProgramBuilder {
         return allWidgets;
     }
 
-    private static class DroneInstruction {
-        final IProgWidget mainInstruction;
-        final List<IProgWidget> whitelist;
-
-        DroneInstruction(IProgWidget mainInstruction, List<IProgWidget> whitelist) {
-            this.mainInstruction = mainInstruction;
-            this.whitelist = whitelist;
-        }
-
+    private record DroneInstruction(IProgWidget mainInstruction, List<IProgWidget> whitelist) {
         void addToWidgets(List<IProgWidget> widgets) {
             widgets.add(mainInstruction);
             widgets.addAll(whitelist);
